# soniqB

./: .gitattributes  .gitignore  .gitmodules  DEBUGGING.md  FRONTEND_REDESIGN.md  GIT_SETUP.md  QUICKSTART.md  README.md  SESSION_CHRONICLES.md  add_events.py  add_tracks.py  fix_storage.py  migrate_db.py  pyproject.toml  seed_data.py  seed_enhanced.py  verify_api.py
backend/: auth.py  db.py  main.py  models.py  requirements.txt  schemas.py  seed.py  seed_data.py
backend/ml/: __init__.py  evaluate_models.py  genre_classifier.py  recommender.py  recurrent_model.py  service.py  train_probe.py  user_clustering.py
backend/ml/data/: checkpoint_combinedrecurrent.pt  musicfm_probe.pt  pretrained_fma.pt
backend/routes/: analytics.py  auth.py  events.py  ml.py  playlists.py  recommendations.py  recommendations_xai.py  tracks.py  universe.py  users.py  wormhole.py
backend/scripts/: debug_analytics.py  generate_embeddings.py  update_confidence.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  main.tsx  types.ts
frontend/src/api/: authApi.ts  eventLogger.ts  musicApi.js
frontend/src/auth/: LoginPage.tsx
frontend/src/components/: IntroOverlay.css  IntroOverlay.tsx  ListeningSummary.jsx  Login.jsx  PlayerView.jsx  PlaylistView.jsx  Register.jsx  UploadSong.css  UploadSong.tsx  UserSelector.jsx
frontend/src/context/: AlertContext.tsx  AudioPlayerContext.tsx  SidebarContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/hooks/: useAudioPlayer.tsx  useEventLogger.ts  (+1 more)
(+51 files in other folders)
