[project]
name = "soniqb"
version = "3.0.0"
description = "SoniqB Music Player with AI/ML Features"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "pydantic==2.5.3",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==5.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "transformers>=4.36.0",
    "einops>=0.7.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]

[project.scripts]
app = "backend.main:start"
seed = "backend.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
